# Padel_Analyzer

./: .gitignore  4-PLAYER_TRACKING.md  BALL_FIELD_IMPROVEMENTS.md  FIELD_DETECTION_FIX.md  IMPLEMENTATION.md  IMPROVEMENTS.md  LICENSE  MIGLIORAMENTI_IT.md  README.md  SUMMARY_IT.md  TESTING_GUIDE.md  config.example.json  extract_frames_for_annotation.py  generate_visualization.py  pyproject.toml  requirements.txt  setup.py  test_field_keypoints_detector.py  test_hybrid_pose_30sec.py  test_pose_30sec.py
.github/: copilot-instructions.md
examples/: basic_usage.py  comprehensive_video_test.py  demo_processing.py  test_heatmap.py  test_hybrid_approach.py  test_standard_yolo.py  test_tracking_comparison.py
notebooks/: train_field_keypoints_yolo.ipynb
padel_analyzer/: analyzer.py
padel_analyzer/detection/: __init__.py  field_detector.py
padel_analyzer/tracking/: __init__.py  ball_tracker.py  player_tracker.py
padel_analyzer/utils/: __init__.py  config.py  device.py
padel_analyzer/video/: __init__.py  video_loader.py
src/: __init__.py  analyzer.py
src/analytics/: __init__.py  heatmap_generator.py
src/detection/: __init__.py  field_detector.py  keypoint_field_detector.py
src/tracking/: __init__.py  action_recognizer.py  ball_tracker.py  player_tracker.py  pose_estimator.py
src/utils/: config.py
tests/: __init__.py  test_action_recognizer.py  test_analyzer.py  test_config.py  test_heatmap.py  test_pose_estimator.py  test_video_loader.py
