[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padel-analyzer"
version = "0.1.0"
description = "AI-based tool to analyze padel matches from video"
readme = "README.md"
authors = [
    {name = "Padel Analyzer Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]
pytorch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
tensorflow = [
    "tensorflow>=2.13.0",
]
all = [
    "padel-analyzer[dev,pytorch]",
]

[project.urls]
Homepage = "https://github.com/ClaudioPoli/Padel_Analyzer"
Repository = "https://github.com/ClaudioPoli/Padel_Analyzer"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
